# RJ-test

./: README.md
baselines/obliviatorFK-TDX/: Makefile.standalone
baselines/obliviatorFK-TDX/common/: error.c  util.c
baselines/obliviatorFK-TDX/enclave/: bitonic.c  bitonic.h  parallel.conf  parallel_enc.c  scalable_oblivious_join.h
baselines/obliviatorNFK-TDX/: standalone_main.c
baselines/obliviatorNFK-TDX/common/: algorithm_type.h  elem_t.h  util.h
datasets/: create_contacts.cpp  create_imbalancedFK.cpp  create_synthetic_data.py  create_unique.cpp
datasets/TPC-H/: tpch_fk.py  tpch_nfk_q1.py  tpch_nfk_q2.py
datasets/real/imdb/: download.sh  (+2 more)
obliviatorFK-TDX/: standalone_main.c
obliviatorFK-TDX/common/: elem_t.h
obliviatorFK-TDX/enclave/: crypto.c  oblivious_compact.c  oblivious_compact.h  parallel_t.d  scalable_oblivious_join.c  threading.c
obliviatorNFK-TDX/: Makefile.standalone
obliviatorNFK-TDX/common/: code_conf.h  error.c
obliviatorNFK-TDX/enclave/: aggregation_tree.h  bitonic.c  crypto.h  oblivious_compact.c  oblivious_distribute.c  parallel_enc.c  scalable_oblivious_join.c  threading.c
radixFK/: CMakeLists.txt  TestOutput.py  backfill_dummies.h  carry_forward.h  generate_hash_R.h  inputs.h  main.cpp  parallel_counts.h  prefix_sum_expand.h  replace_dummies.h  result_indices.h  slice_utils.h  sort_tables.py
radixNFK/: TestOutput.py  align_table.h  backfill_dummies.h  carry_forward.h  inputs.h  main.cpp  merge.h  parallel_counts.h  prefix_sum_expand.h  replace_dummies.h  result_indices.h  slice_utils.h  sort_tables.py  triple32.h
(+11 files in other folders)
